--- a/mortgage-payoff.html
+++ b/mortgage-payoff.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8"/>
 <title>Mortgage Payoff Calculator | Extra Payments, Time Saved &amp; Interest Savings</title>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<meta content="Mortgage payoff calculator: see how extra monthly or one‑time payments shorten your loan term and save interest. Professional, mobile‑first, and WCAG‑compliant." name="description"/>
+<meta content="Mortgage payoff calculator: see how extra monthly or one-time payments shorten your loan term and save interest. Professional, mobile-first, and WCAG-compliant." name="description"/>
 <meta content="Ugo Candido" name="author"/>
 <link href="https://calcdomain.com/mortgage-payoff.html" rel="canonical"/>
 <meta content="#ffffff" name="theme-color"/>
@@ -229,8 +229,8 @@
 <script>
   window.MathJax = {
     tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['\[','\]']]
+      inlineMath: [['\\(','\\)'], ['$', '$']],
+      displayMath: [['\\[','\\]']]
     },
     svg: { fontCache: 'global' }
   };
@@ -245,7 +245,7 @@
 <a class="skip-link" href="#main">Skip to main content</a>
 <main class="container" id="main" role="main">
 <h1>Mortgage Payoff Calculator</h1>
-<p class="lead">Estimate how extra payments—monthly or one‑time—can shorten your mortgage term and reduce total interest. Built for homeowners, buyers, and financial pros seeking precise, accessible results fast.</p>
+<p class="lead">Estimate how extra payments—monthly or one-time—can shorten your mortgage term and reduce total interest. Built for homeowners, buyers, and financial pros seeking precise, accessible results fast.</p>
 <div class="grid" id="calculator-grid">
 <!-- Calculator -->
 <section aria-labelledby="calc-heading" class="card" id="calculator">
@@ -301,7 +301,7 @@
 </div>
 <div class="radio-option">
 <input id="extraOnce" name="extraType" type="radio" value="once"/>
-<label for="extraOnce">One‑time lump sum</label>
+<label for="extraOnce">One-time lump sum</label>
 </div>
 </div>
 </fieldset>
@@ -318,14 +318,14 @@
 </div>
 <div class="form-group" hidden="" id="onceGroup">
 <div class="label-row">
-<label for="lumpSum">One‑time extra amount</label>
+<label for="lumpSum">One-time extra amount</label>
 <button aria-controls="onceTip" aria-expanded="false" aria-label="Toggle lump sum help" class="tooltip-btn" id="onceTipBtn" type="button">?</button>
 </div>
 <div class="input-row">
 <input aria-describedby="lumpSumErr onceTip" class="control" id="lumpSum" inputmode="decimal" min="0" placeholder="e.g., 5000" step="0.01" type="number"/>
 <span aria-hidden="true" class="suffix">$</span>
 </div>
-<div class="input-row" style="grid-template-columns: 1fr; margin-top:8px">
+<div class="input-row" style="grid-template-columns: 1 fr; margin-top:8px">
 <input aria-describedby="lumpSumErr" class="control" id="lumpMonth" inputmode="numeric" min="1" placeholder="Apply in month number (1 = next payment)" step="1" type="number"/>
 </div>
 <div aria-hidden="true" class="tooltip" id="onceTip" role="region">
@@ -370,7 +370,7 @@
 <span class="result-label">Estimated payoff date (with extra)</span>
 <span class="result-value" id="payoffDate">—</span>
 </div>
-<div class="result-note" id="resultNote">Assumes fixed rate, monthly compounding, and on‑time payments. Taxes/insurance/PMI excluded.</div>
+<div class="result-note" id="resultNote">Assumes fixed rate, monthly compounding, and on-time payments. Taxes/insurance/PMI excluded.</div>
 </div>
 </section>
 </div>
@@ -410,13 +410,13 @@
 <div class="formula">
         n' = ⎡ − ln(1 − 0.005 × 300000 / 2133.28) / ln(1.005) ⎤ ≈ 255 months
       </div>
-<p>You would be debt‑free about 45 months sooner (3 years and 9 months earlier), saving tens of thousands in interest. If you choose a single lump sum early in the schedule, the calculator simulates amortization month‑by‑month to show the impact precisely.</p>
+<p>You would be debt-free about 45 months sooner (3 years and 9 months earlier), saving tens of thousands in interest. If you choose a single lump sum early in the schedule, the calculator simulates amortization month-by-month to show the impact precisely.</p>
 <h2>Frequently Asked Questions (FAQ)</h2>
 <div class="faq">
 <h3>Does the calculator include taxes, insurance, or PMI?</h3>
 <p>No. It models principal and interest only so you can isolate the effect of extra payments.</p>
 <h3>What if my APR changes?</h3>
-<p>This tool assumes a fixed APR. For adjustable‑rate mortgages, results will differ when the rate resets.</p>
+<p>This tool assumes a fixed APR. For adjustable-rate mortgages, results will differ when the rate resets.</p>
 <h3>Is biweekly payment support available?</h3>
 <p>Biweekly schedules are not modeled directly, but you can approximate by entering a monthly extra equal to half a payment every month.</p>
 <h3>Why are my lender’s numbers slightly different?</h3>
@@ -426,7 +426,7 @@
 <h3>What if my scheduled payment is too low to amortize?</h3>
 <p>If payment ≤ monthly interest, the balance won’t decrease. Increase the extra payment or verify your remaining term and APR.</p>
 <h3>How precise are the payoff dates?</h3>
-<p>Dates are estimated by adding the computed months to today’s date and assume on‑time monthly payments.</p>
+<p>Dates are estimated by adding the computed months to today’s date and assume on-time monthly payments.</p>
 </div>
 <div class="author">
         Tool developed by <strong>Ugo Candido</strong>. Content verified by the <strong>CalcDomain Editorial Team</strong>.<br/>
@@ -744,7 +744,7 @@
         resultNote.textContent = 'Payment appears too low to amortize the balance. Increase extra payments or check your APR/term.';
         resultNote.style.color = 'var(--danger)';
       }else{
-        resultNote.textContent = 'Assumes fixed rate, monthly compounding, and on‑time payments. Taxes/insurance/PMI excluded.';
+        resultNote.textContent = 'Assumes fixed rate, monthly compounding, and on-time payments. Taxes/insurance/PMI excluded.';
         resultNote.style.color = 'var(--muted)';
       }
     }
@@ -795,7 +795,7 @@
       interestWithExtraEl.textContent = '$0.00';
       interestSavedEl.textContent = '$0.00';
       payoffDateEl.textContent = '—';
-      resultNote.textContent = 'Assumes fixed rate, monthly compounding, and on‑time payments. Taxes/insurance/PMI excluded.';
+      resultNote.textContent = 'Assumes fixed rate, monthly compounding, and on-time payments. Taxes/insurance/PMI excluded.';
       resultNote.style.color = 'var(--muted)';
     });
 
