--- a/mortgage-payoff.html
+++ b/mortgage-payoff.html
@@ -382,11 +382,11 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h3 class="font-bold text-lg mb-4">Related Mortgage Tools</h3>
             <ul class="space-y-3 list-disc list-inside">
-              <li><a class="text-blue-600 hover:underline" href="mortgage-calculator.html">Mortgage Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="mortgage.html">Mortgage Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="loan-amortization.html">Loan Amortization Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="refinance-calculator.html">Refinance Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="affordability.html">Home Affordability Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="debt-to-income.html">Debt-to-Income Ratio Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="mortgage-refinance.html">Refinance Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="house-affordability.html">Home Affordability Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="ddti-ratio-calculator.html">Debt-to-Income Ratio Calculator</a></li>
             </ul>
           </div>
         </div>
