--- a/mortgage-payoff.html
+++ b/mortgage-payoff.html
@@ -386,7 +386,7 @@
               <li><a class="text-blue-600 hover:underline" href="loan-amortization.html">Loan Amortization Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="mortgage-refinance.html">Refinance Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="house-affordability.html">Home Affordability Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="ddti-ratio-calculator.html">Debt-to-Income Ratio Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="ddti-ratio.html">Debt-to-Income Ratio Calculator</a></li>
             </ul>
           </div>
         </div>
