--- a/mortgage.html
+++ b/mortgage.html
@@ -264,7 +264,7 @@
               <li><a class="text-blue-600 hover:underline" href="loan-amortization.html">Loan Amortization Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="house-affordability.html">Home Affordability Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="mortgage-refinance-calculator.html">Refinance Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="dti-ratio-calculator.html">Debt-to-Income Ratio Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="dti-ratio.html">Debt-to-Income Ratio Calculator</a></li>
             </ul>
           </div>
         </div>
