--- a/cubic-feet-to-gallons.html
+++ b/cubic-feet-to-gallons.html
@@ -6,9 +6,9 @@
 <meta content="Easily convert cubic feet to gallons with our precise, professional-grade online tool." name="description"/>
 <meta content="Ugo Candido" name="author"/>
 <link href="https://calcdomain.com/cubic-feet-to-gallons.html" rel="canonical"/>
-<link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
-<link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
-<link href="/manifest.json" rel="manifest"/>
+<link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
+<link href="apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180"/>
+<link href="manifest.json" rel="manifest"/>
 <meta content="#333333" name="theme-color"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
 <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
