--- a/compound-interest-calculator.html
+++ b/compound-interest-calculator.html
@@ -5,13 +5,14 @@
   <title>Compound Interest Calculator | Finance & Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional-grade compound interest calculator. Model lump sums, recurring contributions, compounding frequency, timing, and inflation. Includes formulas, schedule, and FAQs."/>
-  <link rel="canonical" href="https://calcdomain.com/compound-interest.html"/>
+  <meta name="author" content="Ugo Candido"/>
+  <link rel="canonical" href="https://calcdomain.com/compound-interest-calculator.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Compound Interest Calculator"/>
   <meta property="og:description" content="Project investment growth with flexible compounding, recurring contributions, timing, and inflation."/>
-  <meta property="og:url" content="https://calcdomain.com/compound-interest.html"/>
+  <meta property="og:url" content="https://calcdomain.com/compound-interest-calculator.html"/>
 
   <!-- Tailwind & Fonts (from template-calc.html) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -26,14 +27,16 @@
     .prose ol { list-style: decimal; padding-left: 1.25rem; }
     details > summary { cursor: pointer; font-weight: 600; }
     details[open] > summary { margin-bottom: .5rem; }
-    .result-pill { @apply text-sm font-semibold px-2 py-1 rounded; }
-    .eeat { @apply grid gap-3 md:grid-cols-4 text-sm text-gray-700; }
-    .eeat span { @apply block bg-gray-50 border border-gray-200 rounded-md px-3 py-2; }
-    .formula-box { @apply bg-slate-50 border border-slate-200 rounded-md p-4 overflow-auto; }
-    .table th, .table td { @apply border border-slate-200 text-right p-2; }
-    .table th:first-child, .table td:first-child { @apply text-left; }
+    .result-pill { display:inline-flex; align-items:center; font-size:0.875rem; font-weight:600; padding:0.25rem 0.75rem; border-radius:9999px; }
+    .eeat { display:grid; gap:0.75rem; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); font-size:0.875rem; color:#374151; }
+    @media (min-width: 768px) { .eeat { grid-template-columns:repeat(4,minmax(0,1fr)); } }
+    .eeat span { display:block; background:#f9fafb; border:1px solid #e5e7eb; border-radius:0.5rem; padding:0.75rem 1rem; }
+    .formula-box { background:#f8fafc; border:1px solid #e2e8f0; border-radius:0.75rem; padding:1rem; overflow:auto; }
+    .table { width:100%; border-collapse:collapse; }
+    .table th, .table td { border:1px solid #e2e8f0; text-align:right; padding:0.5rem; }
+    .table th:first-child, .table td:first-child { text-align:left; }
     .sticky-ad { height: 600px; }
-      .formula-box mjx-container { overflow-x: auto; }
+    .formula-box mjx-container { overflow-x: auto; }
 
   </style>
 
@@ -49,13 +52,26 @@
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3,"name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4,"name":"Compound Interest Calculator","item":"https://calcdomain.com/compound-interest-calculator.html"}
+    ]
+  }
+  </script>
+
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"WebPage",
     "name":"Compound Interest Calculator",
-    "url":"https://calcdomain.com/compound-interest.html",
+    "url":"https://calcdomain.com/compound-interest-calculator.html",
     "description":"Professional-grade compound interest calculator with flexible compounding, recurring contributions, timing, and inflation adjustment.",
     "publisher":{"@type":"Organization","name":"CalcDomain"},
     "author":{"@type":"Person","name":"Ugo Candido"},
@@ -133,24 +149,24 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT strip -->
-        <nav class="text-sm mb-4 text-gray-600">
+        <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="investment.html" class="hover:text-blue-600">Investment Calculators</a> &raquo;
-          <span>Compound Interest Calculator</span>
+          <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
+          <span class="text-gray-900 font-medium">Compound Interest Calculator</span>
         </nav>
 
         <section class="bg-white p-6 rounded-lg shadow-md">
@@ -424,7 +440,7 @@
           </section>
           <!-- ==== END PRESERVED ORIGINAL CONTENT ==== -->
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -439,7 +455,7 @@
             <h3 class="font-bold text-lg mb-4">Related Investment Tools</h3>
             <ul class="space-y-3">
               <li><a class="text-blue-600 hover:underline" href="simple-interest.html">Simple Interest Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="investment-returns.html">Investment Return Calculator</a></li>
+              <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="sip-calculator.html">SIP / DCA Calculator</a></li>
               <li><a class="text-blue-600 hover:underline" href="inflation.html">Inflation Calculator</a></li>
             </ul>
@@ -448,12 +464,11 @@
       </aside>
 
     </div>
-  </div>
-
+  </main>
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
     <div class="container mx-auto px-6 py-8 text-center text-gray-600">
-      <p>&copy; 2025 CalcDomain. All Rights Reserved.</p>
+      <p>&copy; 2025 CalcDomain. All Rights are Reserved.</p>
     </div>
   </footer>
 
@@ -620,13 +635,13 @@
       // last updated (today, Europe/Rome)
       const d = new Date();
       els.lastUpdated.textContent = d.toLocaleDateString('en-GB', { year:'numeric', month:'long', day:'numeric' });
-    });
 
-    // Toggle timing buttons visual state
-    function updateTimingButtons(){
-      const endLabel = document.querySelector('label[for="timingEnd"] + span, label[for="timingEnd"]') || document.querySelector('label[for="timingEnd"]');
-      const beginLabel = document.querySelector('label[for="timingBegin"] + span, label[for="timingBegin"]') || document.querySelector('label[for="timingBegin"]');
-    }
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => {
+        menu?.classList.toggle('hidden');
+      });
+    });
   </script>
 </body>
 </html>
