--- a/roi.html
+++ b/roi.html
@@ -5,6 +5,7 @@
   <title>Investment Return (ROI) Calculator | Finance & Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional ROI calculator to compute net profit, ROI %, annualized ROI (CAGR), investment multiple (MoIC), and break-even value. Accessible, mobile-first, and optimized for Core Web Vitals."/>
+  <meta name="author" content="Ugo Candido"/>
   <link rel="canonical" href="https://calcdomain.com/roi.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
@@ -26,14 +27,16 @@
     .prose ol { list-style: decimal; padding-left: 1.25rem; }
     details > summary { cursor: pointer; font-weight: 600; }
     details[open] > summary { margin-bottom: .5rem; }
-    .eeat { @apply grid gap-3 md:grid-cols-4 text-sm text-gray-700; }
-    .eeat span { @apply block bg-gray-50 border border-gray-200 rounded-md px-3 py-2; }
-    .formula-box { @apply bg-slate-50 border border-slate-200 rounded-md p-4; }
-    .formula-box mjx-container { overflow-x: auto; }
-    .table th, .table td { @apply border border-slate-200 text-right p-2; }
-    .table th:first-child, .table td:first-child { @apply text-left; }
+    .eeat { display:grid; gap:0.75rem; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); font-size:0.875rem; color:#374151; }
+    @media (min-width: 768px) { .eeat { grid-template-columns:repeat(4,minmax(0,1fr)); } }
+    .eeat span { display:block; background:#f9fafb; border:1px solid #e5e7eb; border-radius:0.5rem; padding:0.75rem 1rem; }
+    .formula-box { background:#f8fafc; border:1px solid #e2e8f0; border-radius:0.75rem; padding:1rem; overflow:auto; }
+    .formula-box mjx-container { overflow-x:auto; }
+    .table { width:100%; border-collapse:collapse; }
+    .table th, .table td { border:1px solid #e2e8f0; text-align:right; padding:0.5rem; }
+    .table th:first-child, .table td:first-child { text-align:left; }
     .sticky-ad { height: 600px; }
-    .result-pill { @apply text-sm font-semibold px-2 py-1 rounded; }
+    .result-pill { display:inline-flex; align-items:center; font-size:0.875rem; font-weight:600; padding:0.25rem 0.75rem; border-radius:9999px; }
   </style>
 
   <!-- Site search hook -->
@@ -47,6 +50,19 @@
     };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3,"name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4,"name":"Investment Return (ROI) Calculator","item":"https://calcdomain.com/roi.html"}
+    ]
+  }
+  </script>
 
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
@@ -132,24 +148,24 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT -->
-        <nav class="text-sm mb-4 text-gray-600">
+        <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="investment.html" class="hover:text-blue-600">Investment Calculators</a> &raquo;
-          <span>ROI Calculator</span>
+          <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
+          <span class="text-gray-900 font-medium">ROI Calculator</span>
         </nav>
 
         <section class="bg-white p-6 rounded-lg shadow-md">
@@ -274,7 +290,7 @@
         <!-- SEO Content / Methodology / Formulas -->
         <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
           <h2>Methodology and Expert Guidance</h2>
-          <p>Calculations follow standard ROI/CAGR definitions used in professional finance. Results are computed from your inputs in real time. For public guidance on compounding/CAGR concepts, see Investor.gov (external reference). This implementation is independent and transparent. :contentReference[oaicite:1]{index=1}</p>
+          <p>Calculations follow standard ROI and CAGR definitions used in professional finance. Results are computed from your inputs in real time. For public guidance on compounding/CAGR concepts, see the U.S. SEC Investor.gov calculator and accompanying education materials (external reference). This implementation is independent and transparently documents each step.</p>
 
           <h2>The Formula Explained</h2>
           <div class="formula-box">
@@ -337,7 +353,7 @@
           <p>ROI applies to any initiative with identifiable initial cost, final value, income, and costs.</p>
 
           <h2 class="mt-10">Full original guide (expanded)</h2>
-          <p class="text-sm text-gray-600">Your previous content is preserved here (lightly edited for consistency and accessibility) and reflected in the integrated sections above. :contentReference[oaicite:2]{index=2}</p>
+          <p class="text-sm text-gray-600">Your previous content is preserved here (lightly edited for consistency and accessibility) and reflected in the integrated sections above.</p>
 
           <!-- ==== BEGIN PRESERVED ORIGINAL CONTENT (from roi.html) ==== -->
           <section>
@@ -368,7 +384,7 @@
           </section>
           <!-- ==== END PRESERVED ORIGINAL CONTENT ==== -->
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -392,7 +408,7 @@
       </aside>
 
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
@@ -561,19 +577,26 @@
       navigator.clipboard.writeText(lines.join('\n')).catch(()=>{});
     }
 
-    // Wire up
-    document.getElementById('calculator-ui').addEventListener('input', render);
-    document.getElementById('fillExample').addEventListener('click', fillExample);
-    document.getElementById('resetAll').addEventListener('click', resetAll);
-    document.getElementById('copySummary').addEventListener('click', copySummary);
+    function bindUI(){
+      document.getElementById('calculator-ui').addEventListener('input', render);
+      document.getElementById('fillExample').addEventListener('click', fillExample);
+      document.getElementById('resetAll').addEventListener('click', resetAll);
+      document.getElementById('copySummary').addEventListener('click', copySummary);
+    }
 
-    // Init
-    document.addEventListener('DOMContentLoaded', () => {
+    function init(){
+      bindUI();
       render();
       const d = new Date();
       document.getElementById('lastUpdated').textContent =
         d.toLocaleDateString('en-GB', { year:'numeric', month:'long', day:'numeric' });
-    });
+
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => { menu?.classList.toggle('hidden'); });
+    }
+
+    document.addEventListener('DOMContentLoaded', init);
   </script>
 </body>
 </html>
