--- a/ira.html
+++ b/ira.html
@@ -380,7 +380,7 @@
 <main class="main-content" id="main-content">
 <div class="container">
 <nav aria-label="breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/investment.html">Investment</a> / IRA Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/subcategories/finance-investment.html">Investment</a> / IRA Calculator
       </nav>
 <h1>IRA Calculator</h1>
 <p>
