--- a/payback-period.html
+++ b/payback-period.html
@@ -156,7 +156,7 @@
         <nav class="text-sm mb-4 text-gray-600">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="investment.html" class="hover:text-blue-600">Investment Calculators</a> &raquo;
+          <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
           <span>Payback Period</span>
         </nav>
 
