--- a/present-value.html
+++ b/present-value.html
@@ -273,7 +273,7 @@
 </header>
 <main class="container" id="main-content" role="main">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/investment.html">Investment</a> / Present Value Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/subcategories/finance-investment.html">Investment</a> / Present Value Calculator
     </nav>
 <h1>Present Value Calculator</h1>
 <p class="note">A professional-grade present value calculator for investors, analysts, and students. Compute the present value of a single future amount or an annuity with flexible compounding and optional inflation adjustment—fast, accurate, and fully accessible.</p>
