--- a/retirement.html
+++ b/retirement.html
@@ -228,7 +228,7 @@
 <main class="main-content" id="main-content" role="main">
 <div class="container">
 <nav aria-label="Breadcrumb" class="breadcrumb">
-<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/investment.html">Investment</a> / Retirement Calculator
+<a href="/">Home</a> / <a href="https://calcdomain.com/finance.html">Finance</a> / <a href="https://calcdomain.com/subcategories/finance-investment.html">Investment</a> / Retirement Calculator
       </nav>
 <h1>Retirement Calculator</h1>
 <p class="note">Quickly project your retirement nest egg and sustainable income in today’s dollars. Built for individuals and professionals, it models compounding growth, inflation, and Social Security so you can see whether you’re on track—and how much to save monthly to close any gap.</p>
