--- a/savings.html
+++ b/savings.html
@@ -210,7 +210,7 @@
         "@type": "ListItem",
         "position": 3,
         "name": "Investment",
-        "item": "https://calcdomain.com/investment.html"
+        "item": "https://calcdomain.com/subcategories/finance-investment.html"
       },
       {
         "@type": "ListItem",
@@ -361,7 +361,7 @@
 <nav aria-label="Breadcrumb" class="breadcrumb">
 <a href="/">Home</a><span aria-hidden="true" class="sep">/</span>
 <a href="https://calcdomain.com/finance.html">Finance</a><span aria-hidden="true" class="sep">/</span>
-<a href="https://calcdomain.com/investment.html">Investment</a><span aria-hidden="true" class="sep">/</span>
+<a href="https://calcdomain.com/subcategories/finance-investment.html">Investment</a><span aria-hidden="true" class="sep">/</span>
 <span aria-current="page">Savings Calculator</span>
 </nav>
 <h1>Savings Calculator</h1>
