--- a/sip-calculator.html
+++ b/sip-calculator.html
@@ -159,7 +159,7 @@
         <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
-          <a href="investment.html" class="hover:text-blue-600">Investment</a> &raquo;
+          <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
           <span>Systematic Investment Plan Calculator</span>
         </nav>
 
