--- a/irr.html
+++ b/irr.html
@@ -5,6 +5,7 @@
   <title>IRR (Internal Rate of Return) Calculator | Finance & Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional IRR calculator for periodic or irregular (XIRR) cash flows. Robust solver with validation, annualization, formulas, worked example, and FAQ."/>
+  <meta name="author" content="Ugo Candido"/>
   <link rel="canonical" href="https://calcdomain.com/irr.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
@@ -26,25 +27,28 @@
     .prose ol { list-style: decimal; padding-left: 1.25rem; }
     details > summary { cursor: pointer; font-weight: 600; }
     details[open] > summary { margin-bottom: .5rem; }
-    .eeat { @apply grid gap-3 md:grid-cols-4 text-sm text-gray-700; }
-    .eeat span { @apply block bg-gray-50 border border-gray-200 rounded-md px-3 py-2; }
-    .formula-box { @apply bg-slate-50 border border-slate-200 rounded-md p-4; }
-    .formula-box mjx-container { overflow-x: auto; }
-    .table th, .table td { @apply border border-slate-200 text-right p-2; }
-    .table th:first-child, .table td:first-child { @apply text-left; }
+    .eeat { display:grid; gap:0.75rem; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); font-size:0.875rem; color:#374151; }
+    @media (min-width: 768px) { .eeat { grid-template-columns:repeat(4,minmax(0,1fr)); } }
+    .eeat span { display:block; background:#f9fafb; border:1px solid #e5e7eb; border-radius:0.5rem; padding:0.75rem 1rem; }
+    .formula-box { background:#f8fafc; border:1px solid #e2e8f0; border-radius:0.75rem; padding:1rem; overflow:auto; }
+    .formula-box mjx-container { overflow-x:auto; }
+    .table { width:100%; border-collapse:collapse; }
+    .table th, .table td { border:1px solid #e2e8f0; text-align:right; padding:0.5rem; }
+    .table th:first-child, .table td:first-child { text-align:left; }
     .sticky-ad { height: 600px; }
-    .result-pill { @apply text-sm font-semibold px-2 py-1 rounded; }
-    .flows thead th { @apply text-left text-gray-500 font-semibold border-b border-slate-200 pb-2; }
-    .flows td { @apply border-b border-dashed border-slate-200 py-2; }
-    .btn { @apply inline-flex items-center justify-center gap-2 px-4 py-2 rounded-md border font-semibold; min-height:44px }
-    .btn-primary { @apply bg-blue-600 text-white border-blue-600; }
-    .btn-secondary { @apply bg-white text-blue-700 border-blue-600; }
-    .btn-ghost { @apply bg-transparent text-gray-800 border-slate-200; }
-    .btn-danger { @apply bg-white text-red-600 border-red-500; }
-    .segmented { @apply flex border border-slate-200 rounded-lg overflow-hidden; }
-    .segmented input { position:absolute; opacity:0; }
-    .segmented label { @apply flex-1 text-center py-2 cursor-pointer select-none; }
-    .segmented input:checked + label { @apply bg-blue-600 text-white; }
+    .result-pill { display:inline-flex; align-items:center; font-size:0.875rem; font-weight:600; padding:0.25rem 0.75rem; border-radius:9999px; }
+    .flows thead th { text-align:left; color:#6b7280; font-weight:600; border-bottom:1px solid #e2e8f0; padding-bottom:0.5rem; }
+    .flows td { border-bottom:1px dashed #e2e8f0; padding:0.5rem 0; }
+    .btn { display:inline-flex; align-items:center; justify-content:center; gap:0.5rem; padding:0.5rem 1rem; border-radius:0.5rem; border:1px solid transparent; font-weight:600; min-height:44px; transition:background-color .2s ease, color .2s ease, border-color .2s ease; }
+    .btn-primary { background:#2563eb; color:#fff; border-color:#2563eb; }
+    .btn-secondary { background:#fff; color:#1d4ed8; border-color:#2563eb; }
+    .btn-ghost { background:transparent; color:#1f2937; border-color:#e2e8f0; }
+    .btn-danger { background:#fff; color:#dc2626; border-color:#ef4444; }
+    .btn:hover { filter:brightness(0.95); }
+    .segmented { display:flex; border:1px solid #e2e8f0; border-radius:0.75rem; overflow:hidden; background:#f8fafc; position:relative; }
+    .segmented input { position:absolute; opacity:0; pointer-events:none; }
+    .segmented label { flex:1; text-align:center; padding:0.5rem 0.75rem; cursor:pointer; user-select:none; font-weight:600; color:#1f2937; transition:background-color .2s ease, color .2s ease; }
+    .segmented input:checked + label { background:#2563eb; color:#fff; }
   </style>
 
   <!-- Site search hook -->
@@ -58,6 +62,19 @@
     };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3,"name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4,"name":"IRR (Internal Rate of Return) Calculator","item":"https://calcdomain.com/irr.html"}
+    ]
+  }
+  </script>
 
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
@@ -142,24 +159,24 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT -->
-        <nav class="text-sm mb-4 text-gray-600">
+        <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
           <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
-          <span>IRR Calculator</span>
+          <span class="text-gray-900 font-medium">IRR Calculator</span>
         </nav>
 
         <section class="bg-white p-6 rounded-lg shadow-md">
@@ -343,7 +360,7 @@
           </section>
           <!-- ==== END PRESERVED ORIGINAL CONTENT ==== -->
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -367,7 +384,7 @@
       </aside>
 
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
@@ -661,6 +678,10 @@
       loadExample();
       const d = new Date();
       els.lastUpdated.textContent = d.toLocaleDateString('en-GB', { year:'numeric', month:'long', day:'numeric' });
+
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => { menu?.classList.toggle('hidden'); });
     });
   </script>
 </body>
