--- a/npv.html
+++ b/npv.html
@@ -5,6 +5,7 @@
   <title>NPV (Net Present Value) Calculator | Finance & Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional NPV calculator for periodic or dated (XNPV) cash flows. Clear UX, sensitivity table, formulas, worked example, and FAQ."/>
+  <meta name="author" content="Ugo Candido"/>
   <link rel="canonical" href="https://calcdomain.com/npv.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
@@ -26,25 +27,28 @@
     .prose ol { list-style: decimal; padding-left: 1.25rem; }
     details > summary { cursor: pointer; font-weight: 600; }
     details[open] > summary { margin-bottom: .5rem; }
-    .eeat { @apply grid gap-3 md:grid-cols-4 text-sm text-gray-700; }
-    .eeat span { @apply block bg-gray-50 border border-gray-200 rounded-md px-3 py-2; }
-    .formula-box { @apply bg-slate-50 border border-slate-200 rounded-md p-4; }
-    .formula-box mjx-container { overflow-x: auto; }
-    .table th, .table td { @apply border border-slate-200 text-right p-2; }
-    .table th:first-child, .table td:first-child { @apply text-left; }
+    .eeat { display:grid; gap:0.75rem; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); font-size:0.875rem; color:#374151; }
+    @media (min-width:768px){ .eeat { grid-template-columns:repeat(4,minmax(0,1fr)); } }
+    .eeat span { display:block; background:#f9fafb; border:1px solid #e5e7eb; border-radius:0.5rem; padding:0.75rem 1rem; }
+    .formula-box { background:#f8fafc; border:1px solid #e2e8f0; border-radius:0.75rem; padding:1rem; overflow:auto; }
+    .formula-box mjx-container { overflow-x:auto; }
+    .table { width:100%; border-collapse:collapse; }
+    .table th, .table td { border:1px solid #e2e8f0; text-align:right; padding:0.5rem; }
+    .table th:first-child, .table td:first-child { text-align:left; }
     .sticky-ad { height: 600px; }
-    .result-pill { @apply text-sm font-semibold px-2 py-1 rounded; }
-    .flows thead th { @apply text-left text-gray-500 font-semibold border-b border-slate-200 pb-2; }
-    .flows td { @apply border-b border-dashed border-slate-200 py-2; }
-    .btn { @apply inline-flex items-center justify-center gap-2 px-4 py-2 rounded-md border font-semibold; min-height:44px }
-    .btn-primary { @apply bg-blue-600 text-white border-blue-600; }
-    .btn-secondary { @apply bg-white text-blue-700 border-blue-600; }
-    .btn-ghost { @apply bg-transparent text-gray-800 border-slate-200; }
-    .btn-danger { @apply bg-white text-red-600 border-red-500; }
-    .segmented { @apply flex border border-slate-200 rounded-lg overflow-hidden; }
-    .segmented input { position:absolute; opacity:0; }
-    .segmented label { @apply flex-1 text-center py-2 cursor-pointer select-none; }
-    .segmented input:checked + label { @apply bg-blue-600 text-white; }
+    .result-pill { display:inline-flex; align-items:center; font-size:0.875rem; font-weight:600; padding:0.25rem 0.75rem; border-radius:9999px; }
+    .flows thead th { text-align:left; color:#6b7280; font-weight:600; border-bottom:1px solid #e2e8f0; padding-bottom:0.5rem; }
+    .flows td { border-bottom:1px dashed #e2e8f0; padding:0.5rem 0; }
+    .btn { display:inline-flex; align-items:center; justify-content:center; gap:0.5rem; padding:0.5rem 1rem; border-radius:0.5rem; border:1px solid transparent; font-weight:600; min-height:44px; transition:background-color .2s ease, color .2s ease, border-color .2s ease; }
+    .btn-primary { background:#2563eb; color:#fff; border-color:#2563eb; }
+    .btn-secondary { background:#fff; color:#1d4ed8; border-color:#2563eb; }
+    .btn-ghost { background:transparent; color:#1f2937; border-color:#e2e8f0; }
+    .btn-danger { background:#fff; color:#dc2626; border-color:#ef4444; }
+    .btn:hover { filter:brightness(0.95); }
+    .segmented { display:flex; border:1px solid #e2e8f0; border-radius:0.75rem; overflow:hidden; background:#f8fafc; position:relative; }
+    .segmented input { position:absolute; opacity:0; pointer-events:none; }
+    .segmented label { flex:1; text-align:center; padding:0.5rem 0.75rem; cursor:pointer; user-select:none; font-weight:600; color:#1f2937; transition:background-color .2s ease, color .2s ease; }
+    .segmented input:checked + label { background:#2563eb; color:#fff; }
   </style>
 
   <!-- Site search hook -->
@@ -58,6 +62,19 @@
     };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2,"name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3,"name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4,"name":"NPV (Net Present Value) Calculator","item":"https://calcdomain.com/npv.html"}
+    ]
+  }
+  </script>
 
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
@@ -143,24 +160,24 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT -->
         <nav class="text-sm mb-4 text-gray-600">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
           <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
-          <span>NPV Calculator</span>
+          <span class="text-gray-900 font-medium">NPV Calculator</span>
         </nav>
 
         <section class="bg-white p-6 rounded-lg shadow-md">
@@ -193,7 +210,7 @@
                 <span class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 font-semibold">%</span>
               </div>
               <p id="rateErr" class="text-sm text-red-600 mt-1 hidden">Please enter a valid rate &gt; -100%.</p>
-              <p class="text-sm text-gray-500 mt-1">For periodic NPV, the tool converts to a per-period rate based on frequency; XNPV discounts by Actual/365 days. :contentReference[oaicite:3]{index=3}</p>
+              <p class="text-sm text-gray-500 mt-1">For periodic NPV, the tool converts to a per-period rate based on frequency; XNPV discounts by Actual/365 days.</p>
             </div>
 
             <div id="freqWrap">
@@ -204,7 +221,7 @@
                 <option value="2">Semiannual (2/yr)</option>
                 <option value="1" selected>Annual (1/yr)</option>
               </select>
-              <p class="text-sm text-gray-500 mt-1">Determines the per-period discount rate from the effective annual rate. :contentReference[oaicite:4]{index=4}</p>
+              <p class="text-sm text-gray-500 mt-1">Determines the per-period discount rate from the effective annual rate.</p>
             </div>
 
             <div id="timingWrap">
@@ -219,7 +236,7 @@
                   <span class="inline-block w-full text-center py-2 rounded-md hover:bg-blue-50 border">Beginning</span>
                 </label>
               </div>
-              <p class="text-sm text-gray-500 mt-1">Beginning-of-period shifts each periodic inflow back by one period. :contentReference[oaicite:5]{index=5}</p>
+              <p class="text-sm text-gray-500 mt-1">Beginning-of-period shifts each periodic inflow back by one period.</p>
             </div>
 
             <div>
@@ -256,7 +273,7 @@
               <tbody id="tbody"></tbody>
             </table>
             <p id="flowsErr" class="text-sm text-red-600 mt-2 hidden"></p>
-            <p class="text-sm text-gray-500 mt-1">Enter positive inflows and negative outflows. At least one row is required. :contentReference[oaicite:6]{index=6}</p>
+            <p class="text-sm text-gray-500 mt-1">Enter positive inflows and negative outflows. At least one row is required.</p>
           </div>
 
           <!-- Results -->
@@ -312,12 +329,12 @@
 
         <!-- Content: methodology, formulas, example, FAQ -->
         <article class="bg-white p-6 rounded-lg shadow-md mt-8 prose">
-          <p>This professional-grade NPV calculator helps analysts, founders, and students evaluate investments by discounting future cash flows to today’s money. It supports both classic periodic cash flows and date-based XNPV and follows accessibility/performance best practices. :contentReference[oaicite:7]{index=7}</p>
+          <p>This professional-grade NPV calculator helps analysts, founders, and students evaluate investments by discounting future cash flows to today’s money. It supports both classic periodic cash flows and date-based XNPV and follows accessibility/performance best practices.</p>
 
           <h2>Data Source and Methodology</h2>
           <ul>
-            <li><strong>Primary reference:</strong> Brealey, Myers, and Allen, <em>Principles of Corporate Finance</em> — DCF chapter. (Publisher page linked in your original.) :contentReference[oaicite:8]{index=8}</li>
-            <li><strong>Function parity:</strong> Microsoft’s NPV and XNPV definitions for spreadsheet consistency. :contentReference[oaicite:9]{index=9}</li>
+            <li><strong>Primary reference:</strong> Brealey, Myers, and Allen, <em>Principles of Corporate Finance</em> — DCF chapter. (Publisher page linked in your original.)</li>
+            <li><strong>Function parity:</strong> Microsoft’s NPV and XNPV definitions for spreadsheet consistency.</li>
           </ul>
 
           <h2>The Formula Explained</h2>
@@ -341,7 +358,7 @@
 
           <h2>How to Use</h2>
           <ol>
-            <li>Enter your <em>discount rate</em> (effective annual). Negative values above −100% are allowed. :contentReference[oaicite:10]{index=10}</li>
+            <li>Enter your <em>discount rate</em> (effective annual). Negative values above −100% are allowed.</li>
             <li>Choose <em>Periodic</em> or <em>Dated (XNPV)</em>. For periodic, set the <em>frequency</em> and <em>timing</em>.</li>
             <li>Enter the <em>initial cash flow</em> at \(t=0\) (usually negative for an investment) and add the cash flows.</li>
             <li>Review NPV, PV of inflows/outflows, Profitability Index, and the sensitivity table.</li>
@@ -355,7 +372,7 @@
             <li>Sum PV(inflows) \(=11{,}085.42\).</li>
             <li>NPV \(=-10{,}000+11{,}085.42=\$1{,}085.42\).</li>
           </ol>
-          <p>Since NPV &gt; 0, the project adds value at a 10% required return. :contentReference[oaicite:11]{index=11}</p>
+          <p>Since NPV &gt; 0, the project adds value at a 10% required return.</p>
 
           <!-- In-content ad slot -->
           <div class="text-center my-6 bg-gray-100 border rounded-md py-10">
@@ -364,18 +381,18 @@
 
           <h2>Frequently Asked Questions (FAQ)</h2>
           <h3>When should I use XNPV instead of NPV?</h3>
-          <p>Use XNPV when cash flows occur on irregular dates. It discounts using the actual days between dates divided by 365. :contentReference[oaicite:12]{index=12}</p>
+          <p>Use XNPV when cash flows occur on irregular dates. It discounts using the actual days between dates divided by 365.</p>
           <h3>How is the per-period rate determined in periodic mode?</h3>
-          <p>From the effective annual rate \(r\) and frequency \(f\): \(r_p=(1+r)^{1/f}-1\). :contentReference[oaicite:13]{index=13}</p>
+          <p>From the effective annual rate \(r\) and frequency \(f\): \(r_p=(1+r)^{1/f}-1\).</p>
           <h3>What does the “Beginning of period” option do?</h3>
-          <p>It shifts periodic cash flows back one period (annuity due), increasing their PV vs end-of-period timing. :contentReference[oaicite:14]{index=14}</p>
+          <p>It shifts periodic cash flows back one period (annuity due), increasing their PV versus end-of-period timing.</p>
           <h3>Profitability Index (PI)</h3>
-          <p>\(\mathrm{PI}=\frac{\text{PV(inflows)}}{|\text{Initial investment}|}\). Values above 1 suggest value creation. :contentReference[oaicite:15]{index=15}</p>
+          <p>\(\mathrm{PI}=\frac{\text{PV(inflows)}}{|\text{Initial investment}|}\). Values above 1 suggest value creation.</p>
 
           <h2 class="mt-10">Full original guide (expanded)</h2>
-          <p class="text-sm text-gray-600">Your previous content is preserved here (lightly edited for consistency and accessibility) and reflected across the integrated sections above. :contentReference[oaicite:16]{index=16}</p>
+          <p class="text-sm text-gray-600">Your previous content is preserved here (lightly edited for consistency and accessibility) and reflected across the integrated sections above.</p>
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -399,7 +416,7 @@
       </aside>
 
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
@@ -694,8 +711,8 @@
       els.outPVOut.textContent = fmtCurrency(res.pvOut);
       els.outPI.textContent = (res.pi && Number.isFinite(res.pi)) ? res.pi.toFixed(3) : '—';
       els.outPerRate.textContent = (mode==='periodic') ? fmtPercent(res.rp) : '—';
-      els.pillFreq.textContent = (mode==='periodic') ? `Freq: ${parseInt(els.frequency.value,10)}/yr` : '';
-      els.pillTiming.textContent = (mode==='periodic') ? `Timing: ${els.timingBegin.checked?'Beginning':'End'}` : '';
+      els.pillFreq.textContent = (mode==='periodic') ? `Freq: ${parseInt(els.frequency.value,10)}/yr` : 'Freq: —';
+      els.pillTiming.textContent = (mode==='periodic') ? `Timing: ${els.timingBegin.checked?'Beginning':'End'}` : 'Timing: —';
 
       buildSensitivity(r);
     }
@@ -722,6 +739,10 @@
       loadExample();
       const d = new Date();
       els.lastUpdated.textContent = d.toLocaleDateString('en-GB', { year:'numeric', month:'long', day:'numeric' });
+
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => { menu?.classList.toggle('hidden'); });
     });
   </script>
 </body>
