--- a/sip-calculator.html
+++ b/sip-calculator.html
@@ -5,6 +5,7 @@
   <title>Systematic Investment Plan Calculator | Finance → Investment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content="Professional SIP (Systematic Investment Plan) calculator with step-up contributions, inflation-adjusted purchasing power, goal-seek for target corpus, clear formulas, worked example, and FAQ."/>
+  <meta name="author" content="Ugo Candido"/>
   <link rel="canonical" href="https://calcdomain.com/sip-calculator.html"/>
   <meta name="theme-color" content="#0b3d69"/>
   <meta name="robots" content="index, follow"/>
@@ -16,6 +17,7 @@
   <!-- Tailwind & Fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="search.js" defer></script>
   <style>
     :root { color-scheme: light; }
     body { font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif; }
@@ -34,16 +36,17 @@
     .formula-box { background:#f8fafc; border:1px solid #e5e7eb; border-radius:.5rem; padding:1rem; }
     .formula-box mjx-container { overflow-x:auto; }
     .table th, .table td { border:1px solid #e5e7eb; padding:.5rem; }
-    .btn { display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.5rem 1rem; border-radius:.5rem; border:1px solid; font-weight:600; min-height:44px; }
+    .btn { display:inline-flex; align-items:center; justify-content:center; gap:.5rem; padding:.5rem 1rem; border-radius:.5rem; border:1px solid transparent; font-weight:600; min-height:44px; transition:background-color .2s ease, color .2s ease, border-color .2s ease; }
     .btn-primary { background:#2563eb; color:#fff; border-color:#2563eb; }
     .btn-secondary { background:#fff; color:#1d4ed8; border-color:#2563eb; }
     .btn-ghost { background:transparent; color:#334155; border-color:#e5e7eb; }
     .btn-danger { background:#fff; color:#dc2626; border-color:#ef4444; }
-    .segmented { display:flex; border:1px solid #e5e7eb; border-radius:.5rem; overflow:hidden; }
-    .segmented input { position:absolute; opacity:0; }
-    .segmented label { flex:1; text-align:center; padding:.5rem .75rem; cursor:pointer; user-select:none; }
+    .btn:hover { filter:brightness(.95); }
+    .segmented { display:flex; border:1px solid #e5e7eb; border-radius:.75rem; overflow:hidden; background:#f8fafc; position:relative; }
+    .segmented input { position:absolute; opacity:0; pointer-events:none; }
+    .segmented label { flex:1; text-align:center; padding:.5rem .75rem; cursor:pointer; user-select:none; font-weight:600; color:#1f2937; transition:background-color .2s ease, color .2s ease; }
     .segmented input:checked + label { background:#2563eb; color:#fff; }
-    .result-pill { font-size:.875rem; font-weight:600; padding:.25rem .5rem; border-radius:.5rem; }
+    .result-pill { display:inline-flex; align-items:center; font-size:.875rem; font-weight:600; padding:.25rem .75rem; border-radius:9999px; }
     .flows thead th { text-align:left; color:#64748b; font-weight:600; border-bottom:1px solid #e5e7eb; padding-bottom:.5rem; }
     .flows td { border-bottom:1px dashed #e5e7eb; padding:.5rem 0; }
     .sr-only-focusable:focus { position: static; width: auto; height: auto; margin: 0; overflow: visible; clip: auto; }
@@ -57,6 +60,19 @@
     };
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://calcdomain.com/"},
+      {"@type":"ListItem","position":2","name":"Finance","item":"https://calcdomain.com/finance.html"},
+      {"@type":"ListItem","position":3","name":"Investment","item":"https://calcdomain.com/subcategories/finance-investment.html"},
+      {"@type":"ListItem","position":4","name":"Systematic Investment Plan Calculator","item":"https://calcdomain.com/sip-calculator.html"}
+    ]
+  }
+  </script>
 
   <!-- Structured Data (WebPage + HowTo + FAQ) -->
   <script type="application/ld+json">
@@ -143,24 +159,24 @@
         </div>
         <div class="space-y-2">
           <a href="search.html" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          <a href="index.html#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
         </div>
       </div>
     </nav>
   </header>
 
   <!-- Main -->
-  <div id="main" class="container mx-auto px-4 py-8">
+  <main class="container mx-auto px-4 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
 
       <!-- Left: Calculator & Content -->
-      <main class="w-full lg:w-2/3">
+      <section class="w-full lg:w-2/3">
         <!-- Breadcrumbs & EEAT -->
         <nav class="text-sm mb-4 text-gray-600" aria-label="Breadcrumb">
           <a href="index.html" class="hover:text-blue-600">Home</a> &raquo;
           <a href="finance.html" class="hover:text-blue-600">Finance</a> &raquo;
           <a href="subcategories/finance-investment.html" class="hover:text-blue-600">Investment</a> &raquo;
-          <span>Systematic Investment Plan Calculator</span>
+          <span class="text-gray-900 font-medium">Systematic Investment Plan Calculator</span>
         </nav>
 
         <section class="bg-white p-6 rounded-lg shadow-md">
@@ -402,7 +418,7 @@
           <hr/>
           <p class="text-sm text-gray-600"><strong>Authorship:</strong> Tool developed by Ugo Candido. Content reviewed by Finance Content Editor. <strong>Last accuracy review:</strong> <time id="reviewDate"></time>.</p>
         </article>
-      </main>
+      </section>
 
       <!-- Right: Sidebar -->
       <aside class="w-full lg:w-1/3">
@@ -422,7 +438,7 @@
         </div>
       </aside>
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
   <footer class="bg-white border-t mt-12">
@@ -570,6 +586,11 @@
         els.outFVReal.textContent = '$0.00';
         els.outPerRate.textContent = '—';
         els.sensBody.innerHTML = '';
+        els.pillFreq.textContent = 'Freq: —';
+        els.pillTiming.textContent = 'Timing: —';
+        els.pillYears.textContent = 'Years: —';
+        els.pillStep.textContent = 'Step-Up: 0%';
+        els.pillInfl.textContent = 'Inflation: 0%';
         return;
       }
 
@@ -674,6 +695,10 @@
 
       // Sensible defaults for immediate UX
       els.sampleData.click();
+
+      const toggle = document.getElementById('mobile-menu-toggle');
+      const menu = document.getElementById('mobile-menu');
+      toggle?.addEventListener('click', () => { menu?.classList.toggle('hidden'); });
     });
   </script>
 </body>
