--- a/sip-calculator.html
+++ b/sip-calculator.html
@@ -432,7 +432,7 @@
               <li><a class="text-blue-600 hover:underline" href="compound-interest-calculator.html">Compound Interest</a></li>
               <li><a class="text-blue-600 hover:underline" href="lumpsum-calculator.html">Lump Sum FV</a></li>
               <li><a class="text-blue-600 hover:underline" href="irr.html">IRR Calculator</a></li>
-              <li><a class="text-blue-600 hover:underline" href="goal-sip-calculator.html">Goal SIP Planner</a></li>
+              <li><a class="text-blue-600 hover:underline" href="roi.html">ROI Calculator</a></li>
             </ul>
           </div>
         </div>
