--- a/googlec8c0eedfe44345b9.html
+++ b/googlec8c0eedfe44345b9.html
@@ -1,3 +1,1 @@
-<script defer src="/assets/js/mobile-menu.js"></script>
-<script defer src="/assets/js/page-enhancements.js"></script>
-</body></html>
+google-site-verification: googlec8c0eedfe44345b9.html
