--- a/ira.html
+++ b/ira.html
@@ -229,12 +229,12 @@
           <p>The calculator compounds your current IRA balance and future contributions monthly using the annual return you provide. Contribution caps follow the selected IRS year; enable the cap toggle to limit annual deposits.</p>
 
           <h2>Formulas</h2>
-          <ul>
-            <li><strong>Monthly rate:</strong> \(i = (1+r)^{1/12} - 1\)</li>
-            <li><strong>Future value of balance:</strong> \(FV_{0} = B_0 (1+i)^n\)</li>
-            <li><strong>Future value of contributions:</strong> \(FV_{c} = PMT \cdot \frac{(1+i)^{n}-1}{i}\)</li>
-            <li><strong>Traditional IRA after tax:</strong> \(FV_{\text{net}} = FV \cdot (1 - t_{\text{ret}})\)</li>
-          </ul>
+          <div class="formula-box">
+            <p><strong>Monthly rate:</strong> \( i = (1+r)^{1/12} - 1 \)</p>
+            <p><strong>Future value of balance:</strong> \( FV_{0} = B_0 (1+i)^n \)</p>
+            <p><strong>Future value of contributions:</strong> \( FV_{c} = PMT \cdot \frac{(1+i)^{n}-1}{i} \)</p>
+            <p><strong>Traditional IRA after tax:</strong> \( FV_{\text{net}} = FV \cdot (1 - t_{\text{ret}}) \)</p>
+          </div>
 
           <h2>How to Use</h2>
           <ol>
