--- a/subcategories/finance-investment.html
+++ b/subcategories/finance-investment.html
@@ -83,6 +83,10 @@
                     <h3 class="text-lg font-semibold text-gray-900">Compound Interest Calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Project lump sums and recurring contributions with flexible compounding and inflation adjustments.</p>
                 </a>
+                <a href="../simple-interest.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                    <h3 class="text-lg font-semibold text-gray-900">Simple Interest Calculator</h3>
+                    <p class="text-sm text-gray-600 mt-2">Compute linear interest on loans or deposits using principal, rate, and time in one step.</p>
+                </a>
                 <a href="../roi.html" class="card-hover bg-white p-5 rounded-lg shadow">
                     <h3 class="text-lg font-semibold text-gray-900">Investment Return (ROI)</h3>
                     <p class="text-sm text-gray-600 mt-2">Calculate net profit, ROI %, annualized return (CAGR), and break-even targets.</p>
