simple loadn finance loands loads debts

--- a/subcategories/finance-loans-debt.html
+++ b/subcategories/finance-loans-debt.html
@@ -75,7 +75,7 @@
         <section>
             <h2 class="text-xl font-semibold text-gray-900 mb-4">Featured calculators</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                <a href="../simple-loan-calculator.html" class="card-hover bg-white p-5 rounded-lg shadow">
+                <a href="../simple-loan.html" class="card-hover bg-white p-5 rounded-lg shadow">
                     <h3 class="text-lg font-semibold text-gray-900">Simple Loan Calculator</h3>
                     <p class="text-sm text-gray-600 mt-2">Compute simple-interest payments, total cost, and payoff time for quick loan estimates.</p>
                 </a>
